css/index.css
h1 {
	font-size: 5rem;
	text-align: center;
}

.bonfire {
	align-self: center;
	height: 55vh;
	width: 55vh;
}

main {
	display: flex;
	flex-flow: row wrap;
	gap: var(--gap);
	padding: var(--padding);
}

article {
	width: 100%;
	display: flex;
	flex-flow: column nowrap;
	gap: 1rem;
	border: var(--border);
	padding: var(--padding);
	border-radius: var(--border-radius);

	.content {
		font-size: 90%;
		line-height: 1.5;
	}

	a:last-child {
		align-self: flex-end;
	}
}

@media (max-width: 600px) {
	article {
		width: calc(100% - var(--padding) * 2);
	}
}

